# citekit

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/: api.html  changelog.md  examples.html  index.html  index.md  mcp.html  script.js  styles.css
docs/.vitepress/: config.ts
docs/api/: cli.md  javascript.md  mcp.md  models.md  python.md  virtual.md
docs/guide/: adapters.md  custom-mappers.md  deployment.md  getting-started.md  index.md  mcp.md  mental-model.md  modern-stack.md  requirements.md  storage.md  technical-deep-dive.md  troubleshooting.md  usage.md
docs/integration/: agents.md  mcp.md
examples/: README.md
examples/rag-fusion/: README.md  hybrid_rag.py  requirements.txt
examples/research-app/: .env.example  README.md  package-lock.json  package.json  research_agent.js
examples/study-companion/: README.md  claude_desktop_config.json
examples/video-search-cli/: README.md  orchestrate_video.py  requirements.txt
javascript/: package-lock.json  package.json  tsconfig.json
javascript/examples/: usage.ts
javascript/src/: adapters.ts  address.ts  (+6 more)
python/: README.md  pyproject.toml
python/citekit/: __init__.py  __main__.py  adapters.py  address.py  aggregator.py  cli.py  client.py  mcp_server.py  models.py
python/citekit/mapper/: __init__.py  base.py  gemini.py
python/citekit/resolvers/: __init__.py  audio.py  base.py  document.py  image.py  text.py  video.py
python/examples/: usage.py
python/tests/: test_address.py  test_models.py  test_resolvers.py
(+38 files in other folders)
